// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Container: Change Plan should not render cc section for aws account 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel
        title="Select A Plan"
      >
        <Component
          plans={
            Array [
              Object {
                "isFree": false,
                "plan": "paid",
              },
              Object {
                "isFree": true,
                "plan": "free",
              },
            ]
          }
        />
      </Panel>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
      />
    </Grid.Column>
  </Grid>
</form>
`;

exports[`Form Container: Change Plan should not show plans 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel
        title="Select A Plan"
      >
        0
      </Panel>
      <Panel
        actions={null}
        title="Add a Credit Card"
      >
        <Panel.Section>
          <Connect(PaymentForm)
            formName="changePlan"
          />
        </Panel.Section>
        <Panel.Section>
          <Connect(BillingAddressForm)
            countries={Array []}
            formName="changePlan"
          />
        </Panel.Section>
      </Panel>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
      />
    </Grid.Column>
  </Grid>
</form>
`;

exports[`Form Container: Change Plan should render 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel
        title="Select A Plan"
      >
        <Component
          plans={
            Array [
              Object {
                "isFree": false,
                "plan": "paid",
              },
              Object {
                "isFree": true,
                "plan": "free",
              },
            ]
          }
        />
      </Panel>
      <Panel
        actions={null}
        title="Add a Credit Card"
      >
        <Panel.Section>
          <Connect(PaymentForm)
            formName="changePlan"
          />
        </Panel.Section>
        <Panel.Section>
          <Connect(BillingAddressForm)
            countries={Array []}
            formName="changePlan"
          />
        </Panel.Section>
      </Panel>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
      />
    </Grid.Column>
  </Grid>
</form>
`;

exports[`Form Container: Change Plan should show saved card 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel
        title="Select A Plan"
      >
        <Component
          plans={
            Array [
              Object {
                "isFree": false,
                "plan": "paid",
              },
              Object {
                "isFree": true,
                "plan": "free",
              },
            ]
          }
        />
      </Panel>
      <Panel
        actions={
          Array [
            Object {
              "content": "Use Another Credit Card",
              "onClick": [Function],
            },
          ]
        }
        title="Pay With Saved Payment Method"
      >
        <Panel.Section>
          <CardSummary />
        </Panel.Section>
      </Panel>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
      />
    </Grid.Column>
  </Grid>
</form>
`;
